
    o User interface for mappability has been streamlined. 'mappability' parameter
      in broadenrich(), chipenrich(), and polyenrich() functions replaces the
      three parameters previously used: 'use_mappability', 'mappa_file', and
      'read_length'. The unified 'mappability' parameter can be 'NULL', a file path,
      or a string indicating the read length for mappability, e.g. '24'.

    o Input files are read according to their file extension. Supported extensions
      are bed, gff3, wig, bedGraph, narrowPeak, and broadPeak. Arbitrary extensions
      are also supported, but there can be no header, and the first three columns
      must be chr, start, and end.

    o Refactor randomize_locusdef() to be much faster.

SIGNIFICANT BACKEND CHANGES

    o Harmonize all code touching LocusDefinition and tss objects to reflect
      changes in chipenrich.data 2.0.0.

        o Alter setup_ldef() function to add symbol column. If a valid genome is
          used use orgDb to get eg2symbol mappings and fill in for the user. Users
          can give their own symbol column which will override using orgDb. Finally,
          if neither symbol column or valid genome is used, symbols are set to NA.

        o Any instance of 'geneid' or 'names' to refer to Entrez Gene IDs are now
          'gene_id' for consistency.

    o Refactor read_bed() function as a wrapper for rtracklayer::import().

        o Automatic extension handling of BED3-6, gff3, wig, or bedGraph.

        o With some additional code, automatic extension handling of narrowPeak
          and broadPeak.

        o Backwards compatible with arbitrary extensions: this still assumes that
          the first three columns are chr, start, end.

        o The purpose of this refactor is to enable additional covariates for the
          peaks for possible use in future methods.

    o Refactor load_peaks() to use GenomicRanges::makeGRangesFromDataFrame().
