@@ -2,6 +2,7 @@
 
 export(assign_peak_segments)
 export(assign_peaks)
+export(broadenrich)
 export(calc_peak_gene_overlap)
 export(chipenrich)
 export(load_peaks)
