@@ -1,13 +1,17 @@
-#!/usr/bin/env Rscript
 os = Sys.info()[1]
 
-#' Run ChIP-Enrich on a dataset of ChIP-seq peaks
+#' Run Broad-Enrich on broad genomic regions
 #'
-#' Run gene set enrichment testing (ChIP-Enrich) on a ChIP-seq
-#' peak dataset or other type of dataset consisting of regions across the genome.
-#' The user can call \code{chipenrich()} to run the method on their data. A number
-#' of arguments can be provided to change the type of test, the genome build,
-#' which sets of genes to test, how peaks are assigned to genes, and other minor options.
+#' Run gene set enrichment testing with the Broad-Enrich method. Broad-Enrich is
+#' designed for broad genomic regions, as one often gets from ChIP-seq experiments
+#' on histone modifications.
+#'
+#' The Broad-Enrich method uses the cumulative peak coverage of genes in its model
+#' for enrichment in the model \code{GO ~ ratio + s(log10_length)}. Here, \code{GO}
+#' is a binary vector indicating whether a gene is in the gene set being tested,
+#' \code{ratio} is a numeric vector indicating the ratio of the gene covered by
+#' peaks, and \code{s(log10_length)} is a binomial cubic smoothing spline which
+#' adjusts for the relationship between gene coverage and locus length.
 #'
 #' @param peaks Either a file path or a \code{data.frame} of peaks in BED-like
 #' format. If a file path, the following formats are fully supported via their
@@ -20,11 +24,11 @@ os = Sys.info()[1]
 #' acceptable column names.
 #' @param out_name Prefix string to use for naming output files. This should not
 #' contain any characters that would be illegal for the system being used (Unix,
-#' Windows, etc.) The default value is "chipenrich", and a file "chipenrich_results.tab"
-#' is produced. If \code{qc_plots} is set, then a file "chipenrich_qcplots.pdf"
+#' Windows, etc.) The default value is "broadenrich", and a file "broadenrich_results.tab"
+#' is produced. If \code{qc_plots} is set, then a file "broadenrich_qcplots.pdf"
 #' is produced containing a number of quality control plots. If \code{out_name}
 #' is set to NULL, no files are written, and results then must be retrieved from
-#' the list returned by \code{chipenrich}.
+#' the list returned by \code{broadenrich}.
 #' @param out_path Directory to which results files will be written out. Defaults
 #' to the current working directory as returned by \code{\link{getwd}}.
 #' @param genome One of the \code{supported_genomes()}.
@@ -37,27 +41,17 @@ os = Sys.info()[1]
 #' '10kb', '10kb_outside', '10kb_outside_upstream'. Alternately, a file path for
 #' a custom locus definition. NOTE: Must be for a \code{supported_genome()}, and
 #' must have columns 'chr', 'start', 'end', and 'gene_id' or 'geneid'.
-#' @param method A character string specifying the method to use for enrichment
-#' testing. Must be one of ChIP-Enrich ('chipenrich') (default), Poly-Enrich ('polyenrich'),
-#' or Fisher's exact test ('fet'). For a list of supported methods, use
-#' \code{supported_methods()}.
 #' @param mappability One of \code{NULL}, a file path to a custom mappability file,
 #' or an \code{integer} for a valid read length given by \code{supported_read_lengths}.
 #' If a file, it should contain a header with two column named 'gene_id' and 'mappa'.
 #' Gene IDs should be Entrez IDs, and mappability values should range from 0 and 1.
 #' Default value is NULL.
-#' @param fisher_alt If method is 'fet', this option indicates the alternative
-#' for Fisher's exact test, and must be one of 'two-sided' (default), 'greater',
-#' or 'less'.
 #' @param qc_plots A logical variable that enables the automatic generation of
 #' plots for quality control.
 #' @param min_geneset_size Sets the minimum number of genes a gene set may have
 #' to be considered for enrichment testing.
 #' @param max_geneset_size Sets the maximum number of genes a gene set may have
 #' to be considered for enrichment testing.
-#' @param num_peak_threshold Sets the threshold for how many peaks a gene must
-#' have to be considered as having a peak. Defaults to 1. Only relevant for
-#' Fisher's exact test and ChIP-Enrich methods.
 #' @param n_cores The number of cores to use for enrichment testing. We recommend
 #' using only up to the maximum number of \emph{physical} cores present, as
 #' virtual cores do not significantly decrease runtime. Default number of cores
@@ -65,7 +59,7 @@ os = Sys.info()[1]
 #'
 #' @return A list, containing the following items:
 #'
-#' \item{opts }{A data frame containing the arguments/values passed to \code{chipenrich}.}
+#' \item{opts }{ A data frame containing the arguments/values passed to \code{broadenrich}.}
 #'
 #' \item{peaks }{
 #' A data frame containing peak assignments to genes. Peaks which do not overlap
@@ -81,14 +75,13 @@ os = Sys.info()[1]
 #'   \item{chr}{ is the chromosome the peak originated from. }
 #'   \item{peak_start}{ is start position of the peak. }
 #'   \item{peak_end}{ is end position of the peak. }
-#'   \item{peak_midpoint}{ is the midpoint of the peak. }
 #'   \item{gene_id}{ is the Entrez ID of the gene to which the peak was assigned. }
 #'   \item{gene_symbol}{ is the official gene symbol for the gene_id (above). }
 #'   \item{gene_locus_start}{ is the start position of the locus for the gene to which the peak was assigned (specified by the locus definition used.) }
 #'   \item{gene_locus_end}{ is the end position of the locus for the gene to which the peak was assigned (specified by the locus definition used.) }
-#'   \item{nearest_tss}{ is the closest TSS to this peak (for any gene, not necessarily the gene this peak was assigned to.) }
-#'   \item{nearest_tss_gene}{ is the gene having the closest TSS to the peak (should be the same as gene_id when using the nearest TSS locus definition.) }
-#'   \item{nearest_tss_gene_strand}{ is the strand of the gene with the closest TSS. }
+#'   \item{overlap_start}{ the start position of the peak overlap with the gene locus.}
+#'   \item{overlap_end}{ the end position of the peak overlap with the gene locus.}
+#'   \item{peak_overlap}{ the base pair overlap of the peak with the gene locus.}
 #' }}
 #'
 #' \item{peaks_per_gene }{
@@ -100,6 +93,8 @@ os = Sys.info()[1]
 #'   \item{log10_length}{ is the log10(locus length) for the gene.}
 #'   \item{num_peaks}{ is the number of peaks that were assigned to the gene, given the current locus definition. }
 #'   \item{peak}{ is whether or not the gene is considered to have a peak, as defined by \code{num_peak_threshold}. }
+#'   \item{peak_overlap}{ is the number of base pairs of the gene covered by a peak.}
+#'   \item{ratio}{ is the proportion of the gene covered by a peak.}
 #' }}
 #'
 #' \item{results }{
@@ -117,18 +112,19 @@ os = Sys.info()[1]
 #'   \item{N.Geneset.Genes}{ is the number of genes in the gene set.}
 #'   \item{N.Geneset.Peak.Genes}{ is the number of genes in the genes set that were assigned at least one peak.}
 #'   \item{Geneset.Avg.Gene.Length}{ is the average length of the genes in the gene set.}
+#'   \item{Geneset.Avg.Gene.Coverage}{ is the mean proportion of the gene loci in the gene set covered by a peak.}
 #'   \item{Geneset.Peak.Genes}{ is the list of genes from the gene set that had at least one peak assigned.}
 #'
 #' }}
 #'
 #' @examples
 #'
-#' # Run ChipEnrich using an example dataset, assigning peaks to the nearest TSS,
+#' # Run Broad-Enrich using an example dataset, assigning peaks to the nearest TSS,
 #' # and on a small custom geneset
 #' data(peaks_E2F4, package = 'chipenrich.data')
 #' peaks_E2F4 = subset(peaks_E2F4, peaks_E2F4$chrom == 'chr1')
 #' gs_path = system.file('extdata','vignette_genesets.txt', package='chipenrich')
-#' results = chipenrich(peaks_E2F4, method='chipenrich', locusdef='nearest_tss',
+#' results = broadenrich(peaks_E2F4, locusdef='nearest_tss',
 #' 			genome = 'hg19', genesets=gs_path, out_name=NULL)
 #'
 #' # Get the list of peaks that were assigned to genes.
@@ -142,9 +138,9 @@ os = Sys.info()[1]
 #' @include read.R assign_peaks.R peaks_per_gene.R
 #' @include plot_dist_to_tss.R plot_gene_coverage.R plot_spline_length.R
 #' @include test_approx.R test_binomial.R test_fisher.R test_gam.R
-chipenrich = function(
+broadenrich = function(
 	peaks,
-	out_name = "chipenrich",
+	out_name = "broadenrich",
 	out_path = getwd(),
 	genome = supported_genomes(),
 	genesets = c(
@@ -152,13 +148,10 @@ chipenrich = function(
 		'GOCC',
 		'GOMF'),
 	locusdef = "nearest_tss",
-	method = 'chipenrich',
 	mappability = NULL,
-	fisher_alt = "two.sided",
 	qc_plots = TRUE,
 	min_geneset_size = 15,
 	max_geneset_size = 2000,
-	num_peak_threshold = 1,
 	n_cores = 1
 ) {
 	genome = match.arg(genome)
@@ -222,38 +215,6 @@ chipenrich = function(
 	mappa = setup_mappa(mappa_code = mappability, genome = genome, ldef_code = locusdef, ldef_obj = ldef)
 
 	############################################################################
-	# CHECK method and get() it if okay
-	get_test_method = function(x) {
-		if (method %in% names(SUPPORTED_METHODS)) {
-			return(SUPPORTED_METHODS[[method]])
-		} else if (method %in% names(HIDDEN_METHODS)) {
-			return(HIDDEN_METHODS[[method]])
-		} else {
-			stop(sprintf("Error: invalid enrichment test requested: %s, contact developer.",method))
-		}
-	}
-	testf = get_test_method(method)
-	test_func = get(testf)
-
-	# Test name.
-	method_name = METHOD_NAMES[[method]]
-
-	############################################################################
-	# Warn user if they are trying to use FET with a
-	# locus definition that might lead to biased results.
-	if (method == "fet") {
-		if (is.character(locusdef) && !locusdef %in% c("1kb","5kb")) {
-			message("Warning: Fisher's exact test should only be used with the 1kb or 5kb locus definition.")
-		}
-	}
-
-	# Warn user if they are using the binomial test.
-	if (method == "binomial") {
-		message("Warning: the binomial test is provided for comparison purposes only.")
-		message("This test will almost always give biased results favoring gene sets with short average locus length.")
-	}
-
-	############################################################################
 	############################################################################
     # Start enrichment process
 	############################################################################
@@ -272,7 +233,8 @@ chipenrich = function(
 	num_peaks = length(peakobj)
 
 	######################################################
-	# Assign peaks to genes.
+	# Assign peaks to genes. NOTE: If method = 'broadenrich' use
+	# assign_peak_segments(), otherwise use assign_peaks().
 	message("Assigning peaks to genes with assigned_peak_segments(...) ..")
 	assigned_peaks = assign_peak_segments(peakobj, ldef)
 
@@ -281,14 +243,10 @@ chipenrich = function(
 	######################################################
 	# Compute peaks per gene table
 	ppg = num_peaks_per_gene(assigned_peaks, ldef, mappa)
-	# This seems redundant given num_peaks_per_gene(...)
-	ppg$peak = recode_peaks(ppg$num_peaks, num_peak_threshold)
 
-	# Add relevant columns to ppg depending on the method
-	if(method == 'chipapprox') {
-		message("Calculating weights for approximate method..")
-		ppg = calc_approx_weights(ppg,mappa)
-	}
+	# Add gene overlaps for broadenrich
+	message("Calculating peak overlaps with gene loci..")
+	ppg = calc_peak_gene_overlap(assigned_peaks,ppg)
 
 	######################################################
 	# Randomize ppg table if randomization API invoked
@@ -303,33 +261,13 @@ chipenrich = function(
 
 	######################################################
 	# Enrichment
-	# Run chipenrich method on each geneset.
+	# Run broadenrich method on each geneset.
 	results = list()
 	for (gobj in geneset_list) {
-		message(sprintf("Test: %s",method_name))
-		message(sprintf("Genesets: %s",gobj@type))
+		message("Test: Broad-Enrich")
+		message(sprintf("Genesets: %s", gobj@type))
 		message("Running tests..")
-		if (testf == "test_gam") {
-			rtemp = test_func(gobj,ppg,n_cores)
-		}
-		if (testf == "test_fisher_exact") {
-			rtemp = test_func(gobj,ppg,alternative=fisher_alt)
-		}
-		if (testf == "test_binomial") {
-			rtemp = test_func(gobj,ppg)
-		}
-		if (testf == "test_approx") {
-			rtemp = test_func(gobj,ppg,nwp=FALSE,n_cores)
-		}
-		if (testf == "test_gam_nb") {
-			rtemp = test_func(gobj,ppg,n_cores);
-		}
-		if (testf == "test_gam_nb_fast") {
-			rtemp = test_func(gobj,ppg,n_cores);
-		}
-		if (testf == "test_gam_fast") {
-			rtemp = test_func(gobj,ppg,n_cores);
-		}
+		rtemp = test_gam_ratio(gobj, ppg, n_cores)
 
 		# Annotate with geneset descriptions.
 		rtemp$"Description" = as.character(mget(rtemp$Geneset.ID, gobj@set.name, ifnotfound=NA))
@@ -396,8 +334,7 @@ chipenrich = function(
 		if (qc_plots) {
 			filename_qcplots = file.path(out_path, sprintf("%s_qcplots.pdf", out_name))
 			grDevices::pdf(filename_qcplots)
-				print(..plot_spline_length(ldef, peak_genes, num_peaks, mappa=mappa))
-				print(..plot_dist_to_tss(peakobj, tss))
+				print(..plot_gene_coverage(ppg))
 			grDevices::dev.off()
 			message("Wrote QC plots to: ",filename_qcplots)
 		}
