@@ -56,6 +56,10 @@ SIGNIFICANT USER-LEVEL CHANGES
       'read_length'. The unified 'mappability' parameter can be 'NULL', a file path,
       or a string indicating the read length for mappability, e.g. '24'.
 
+    o Many functions with the 'genome' parameter had a default of 'hg19', which
+      was not ideal. Now users must specify a genome and it is checked against
+      supported_genomes().
+
     o Input files are read according to their file extension. Supported extensions
       are bed, gff3, wig, bedGraph, narrowPeak, and broadPeak. Arbitrary extensions
       are also supported, but there can be no header, and the first three columns
